# pickle

./: .gitignore  Cargo.toml  DESIGN.md  PRODUCT.md  README.md  go.mod
.github/workflows/: release.yml
apps/android/: settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/java/com/callumalpass/pickle/: MainActivity.kt
apps/android/app/src/main/java/com/callumalpass/pickle/data/: ConnectionUrl.kt  PickleApi.kt  PickleModels.kt  PickleRepository.kt  PickleSettings.kt
apps/android/app/src/main/java/com/callumalpass/pickle/realtime/: PickleBootReceiver.kt  PickleRealtimeService.kt
apps/android/app/src/main/java/com/callumalpass/pickle/theme/: Color.kt  (+2 more)
apps/android/app/src/main/java/com/callumalpass/wickle/: MainActivity.kt
apps/android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
apps/android/app/src/main/res/values/: strings.xml  themes.xml
apps/android/gradle/: libs.versions.toml
cmd/pickle/: main.go
cmd/wickle/: main.go
docs/: architecture.md  systemd-user.md
internal/config/: config.go
internal/model/: id.go  model.go
internal/schema/: validate.go  validate_test.go
internal/server/: broker.go  server.go  server_test.go
internal/store/: attachments.go  store.go  store_test.go
scripts/: smoke.sh
skills/pickle/: SKILL.md
skills/pickle/agents/: openai.yaml
src/: collection.rs  config.rs  legacy_sqlite.rs  lib.rs  main.rs  model.rs  server.rs  templates.rs
testdata/: approval.schema.json
tests/: mdbase_collection.rs
(+35 files in other folders)
