[package]
name = "pickle"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
mdbase = { path = "../mdbase-rs" }
mime_guess = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
ulid = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
tower = "0.5"
